crates/ty_python_semantic/resources/mdtest/snapshots/invalid_argument_type.md_-_Invalid_argument_type_diagnostics_-_Tests_for_a_variety_of_argument_types_-_Variadic_keyword_arguments.snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Tests for a variety of argument types - Variadic keyword arguments
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | def foo(**numbers: int) -> int:
2 |     return len(numbers)
3 | 
4 | foo(a=1, b=2, c=3, d="hello", e=5)  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to this function is incorrect
 --> src/mdtest_snippet.py:4:20
  |
2 |     return len(numbers)
3 |
4 | foo(a=1, b=2, c=3, d="hello", e=5)  # error: [invalid-argument-type]
  |                    ^^^^^^^^^ Expected `int`, found `Literal["hello"]`
  |
info: Function defined here
 --> src/mdtest_snippet.py:1:5
  |
1 | def foo(**numbers: int) -> int:
  |     ^^^ -------------- Parameter declared here
2 |     return len(numbers)
  |
info: `lint:invalid-argument-type` is enabled by default

```
