crates/ty_python_semantic/resources/mdtest/snapshots/invalid_argument_typ…_-_Invalid_argument_typ…_-_Different_files_(d02c38e2dd054b4c).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Different files
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## package.py

```
1 | def foo(x: int) -> int:
2 |     return x * x
```

## mdtest_snippet.py

```
1 | import package
2 | 
3 | package.foo("hello")  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
 --> src/mdtest_snippet.py:3:13
  |
3 | package.foo("hello")  # error: [invalid-argument-type]
  |             ^^^^^^^ Expected `int`, found `Literal["hello"]`
  |
info: Function defined here
 --> src/package.py:1:5
  |
1 | def foo(x: int) -> int:
  |     ^^^ ------ Parameter declared here
  |

```
