crates/ty_python_semantic/resources/mdtest/snapshots/invalid_argument_typ…_-_Invalid_argument_typ…_-_Different_source_ord…_(9b0bf549733d3f0a).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Different source order
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | def bar():
2 |     foo("hello")  # error: [invalid-argument-type]
3 | 
4 | def foo(x: int) -> int:
5 |     return x * x
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
 --> src/mdtest_snippet.py:2:9
  |
2 |     foo("hello")  # error: [invalid-argument-type]
  |         ^^^^^^^ Expected `int`, found `Literal["hello"]`
  |
info: Function defined here
 --> src/mdtest_snippet.py:4:5
  |
4 | def foo(x: int) -> int:
  |     ^^^ ------ Parameter declared here
  |

```
