crates/ty_python_semantic/resources/mdtest/snapshots/invalid_argument_typ…_-_Invalid_argument_typ…_-_Test_calling_a_funct…_(3b18271a821a59b).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Test calling a function whose type is vendored from `typeshed`
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | import json
2 | 
3 | json.loads(5)  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `loads` is incorrect
 --> src/mdtest_snippet.py:3:12
  |
1 | import json
2 |
3 | json.loads(5)  # error: [invalid-argument-type]
  |            ^ Expected `str | bytes | bytearray`, found `Literal[5]`
  |
info: type `Literal[5]` is not assignable to any element of the union `str | bytes | bytearray`
info: ├── type `Literal[5]` is not assignable to `str`
info: ├── type `Literal[5]` is not assignable to `bytes`
info: └── type `Literal[5]` is not assignable to `bytearray`
info: Function defined here
   --> stdlib/json/__init__.pyi:224:5
    |
222 |     """
223 |
224 | def loads(
    |     ^^^^^
225 |     s: str | bytes | bytearray,
    |     -------------------------- Parameter declared here
226 |     *,
227 |     cls: type[JSONDecoder] | None = None,
    |

```
