crates/ty_python_semantic/resources/mdtest/snapshots/invalid_argument_typ…_-_Invalid_argument_typ…_-_Tests_for_a_variety_…_-_Synthetic_arguments_(4c09844bbbf47741).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Tests for a variety of argument types - Synthetic arguments
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | class C:
2 |     def __call__(self, x: int) -> int:
3 |         return 1
4 | 
5 | c = C()
6 | c("wrong")  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to bound method `__call__` is incorrect
 --> src/mdtest_snippet.py:6:3
  |
6 | c("wrong")  # error: [invalid-argument-type]
  |   ^^^^^^^ Expected `int`, found `Literal["wrong"]`
  |
info: Method defined here
 --> src/mdtest_snippet.py:2:9
  |
2 |     def __call__(self, x: int) -> int:
  |         ^^^^^^^^       ------ Parameter declared here
  |

```
