crates/ty_python_semantic/resources/mdtest/snapshots/invalid_argument_typ…_-_Invalid_argument_typ…_-_TypeVars_with_bounds…_(25b61918ea9f5644).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - TypeVars with bounds that have the same name but are from different files
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## module.py

```
1 | class Foo: ...
2 | 
3 | def needs_a_foo(x: Foo): ...
```

## main.py

```
1 | from module import needs_a_foo
2 | 
3 | class Foo: ...
4 | 
5 | def f[T: Foo](x: T) -> T:
6 |     needs_a_foo(x)  # error: [invalid-argument-type]
7 |     return x
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `needs_a_foo` is incorrect
 --> src/main.py:6:17
  |
5 | def f[T: Foo](x: T) -> T:
6 |     needs_a_foo(x)  # error: [invalid-argument-type]
  |                 ^ Expected `Foo`, found `T@f`
7 |     return x
  |
info: Function defined here
 --> src/module.py:3:5
  |
1 | class Foo: ...
2 |
3 | def needs_a_foo(x: Foo): ...
  |     ^^^^^^^^^^^ ------ Parameter declared here
  |

```
